@@ -2,5 +2,11 @@
 
 == Bugfix: Update PSU Data (Select Authentication Method) for account information consent request fails with an error
 Executing valid Update PSU Data (Select Authentication Method) for account information consent request
- (`PUT /v1/consents/{consentId}/authorisations/{authorisationId}`) with non-json body will no longer result in 
+ (`PUT /v1/consents/{consentId}/authorisations/{authorisationId}`) with non-json body will no longer result in
  `400 FORMAT_ERROR` being returned in the response.
+
+== Bugfix: Increase the length of the `iban` and `end_to_end_identification` columns in the database
+
+Types of the `iban` and `end_to_end_identification` columns were changed to increase the value length limit.
+The type of the `iban` column in the `account_reference` table was changed to `VARCHAR(34)` and the type of the
+`end_to_end_identification` column in the `pis_payment_data` table was changed to the `VARCHAR(35)`.
